--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-updates": "~0.18.12",
+    "expo-dev-client": "~2.4.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
